# netcdf_to_parquet

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
data_transformation/: __main__.py
data_transformations/: __main__.py
netcdf_to_parquet/: __init__.py  __main__.py  process_data.py  utils.py
src/: __main__.py  constants.py  process_data.py  utils.py
tests/: conftest.py  test_process_data.py  test_utils.py
transform/: __main__.py
