[tool.poetry]
name = "jua-data-engineer-assignment"
version = "0.1.0"
description = "Solution to Jua's Data Engineer assignment."
authors = ["Naman Jain"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
xarray = "^2024.7.0"
pyarrow = "^17.0.0"
gcsfs = "^2024.6.1"
scipy = "^1.14.1"
netcdf4 = "^1.7.1.post2"
h3 = "^3.7.7"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"
pre-commit = "^3.8.0"
flake8 = "^7.1.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
